feat(client): add rate limit page and improve image handling
- Add RateLimitPage component for handling daily usage limits
- Implement proper error handling for rate limit scenarios
- Update image processing to use URLs instead of base64 for better performance
- Modify Result page to fetch partner images via server proxy
- Update history records to store image URLs instead of base64 data
- Add user ID utility for tracking and analytics

fix(client): resolve CORS issues with image sharing

- Remove client-side image conversion functions
- Update share card generation to work with base64 images from backend
- Fix image loading in share cards and result previews
- Improve error handling for image processing failures

refactor(client): restructure project architecture

- Move client files to dedicated directory
- Add proper package.json for client dependencies
- Update import paths to reflect new directory structure
- Rename image-related fields from base64 to URL-based storage

docs: update README with comprehensive project documentation

- Add detailed architecture diagram showing frontend/backend flow
- Include quick start instructions with environment setup
- Document project structure and key improvements
- Add API endpoint specifications
- Provide deployment configurations for development and production

chore: configure environment and security settings

- Add .env.example with proper API key configuration
- Update .gitignore to exclude server/.env file
- Add security measures to keep API keys server-side only
- Configure proper CORS and proxy settings

--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
   "name": "destiny-match",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "Destiny Match - AI Powered Romance Discovery",
+  "workspaces": [
+    "client",
+    "server"
+  ],
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "html-to-image": "^1.11.13",
-    "openai": "^4.77.0",
-    "qrcode": "^1.5.4",
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4"
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\" --names \"SERVER,CLIENT\" --prefix-colors \"cyan,green\"",
+    "dev:client": "cd client && npm run dev",
+    "dev:server": "cd server && npm run dev",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "cd client && npm run build",
+    "build:server": "cd server && npm run build",
+    "install:all": "npm install && cd client && npm install && cd ../server && npm install",
+    "start": "cd server && npm start"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@types/qrcode": "^1.5.6",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "concurrently": "^8.2.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
