feat(client): add HEIC/HEIF format support with file upload refactor
- Add heic2any dependency for HEIC/HEIF to JPEG conversion
- Refactor image upload flow to pass File objects instead of base64 strings
- Implement HEIC/HEIF detection and conversion in Upload component
- Add loading states and error handling during conversion
- Update drag and drop handlers to work with async file processing

fix(server): implement proper image upload with multer and public URL support

- Add multer for handling multipart form data uploads
- Store image buffers in memory during upload processing
- Support public base URL configuration for local image access
- Update image storage service to handle buffer input
- Modify analysis controller to work with image URLs instead of base64

chore(config): update dependencies and ignore log files

- Add heic2any to client and root package.json
- Include multer and @types/multer dependencies in server
- Add log file patterns to .gitignore (app.log, client.log, *.log)
- Update env example with PUBLIC_BASE_URL configuration

--- a/server/.env.example
+++ b/server/.env.example
@@ -19,6 +19,12 @@ DREAMINA_API_KEY=
 # 获取地址: https://siliconflow.cn/
 SILICONFLOW_API_KEY=
 
+# 公网可访问的基础 URL（用于即梦 API 访问本地图片）
+# 本地图片路径如 /images/2024-01-15/uuid.jpg 会拼接为 ${PUBLIC_BASE_URL}/images/...
+# 示例: https://your-domain.com 或 https://your-server-ip:3001
+# 默认值为: https://destiny.mahaoliang.tech/
+PUBLIC_BASE_URL=
+
 # ============================================
 # 生产环境部署指南
 # ============================================
