--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "heic2any": "^0.0.4",
     "html-to-image": "^1.11.13",
     "qrcode": "^1.5.4",
     "react": "^19.2.4",
